# Intelligent-Search-agent

./: .env.example  .gitignore  DOCUMENTATION.md  EVALUATION_RESULTS.md  PROJECT_IDEAS.md  PROJECT_PROPOSAL.txt  README.md  evaluation_results.json  pyproject.toml  requirements.txt
frontend/: app.js  index.html  styles.css
notebooks/: 01_exploration.ipynb  02_evaluation.ipynb  03_demo.ipynb
notebooks/data/chroma_db/db6397c7-b48b-488f-9dae-201a61424ca5/: index_metadata.pickle
src/: __init__.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: __init__.py  query_analyzer.py  query_decomposer.py  reflector.py  retriever.py  router.py  synthesizer.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/evaluation/: __init__.py  evaluator.py  generation_metrics.py  google_baseline.py  judge_agent.py  metrics.py  ragas_evaluation.py  robustness.py  test_cases.py
src/evaluation/fixtures/: google_results.json
src/ingestion/: __init__.py  chunker.py  document_loader.py  embedder.py
src/retrievers/: __init__.py  arxiv_search.py  vector_store.py  web_search.py
src/utils/: __init__.py  config.py  llm.py  prompts.py
tests/: test_agent.py  test_api.py  test_retrievers.py
